@@ -24,6 +24,9 @@ Migrate GenerateRestClientTask from Groovy to Java.
 (RB=1648840)
 Migrate GenerateRestModelTask from Groovy to Java.
 
+(RB=1648841)
+Migrate PublishRestModelTask from Groovy to Java.
+
 27.0.18
 -------
 (RB=1647191)
